mockito: remove easymock from opennms-dao